# Parallel-programming

lab1/: CMakeLists.txt  build.sh  main.c  mpe-build.sh  run.sh  Отчёт по л_р 1 ОПП Хасков 21209.docx
lab2/: CMakeLists.txt  Time counting.xlsx  build.sh  main.c  main1.c  mpe-build.sh  run.sh  schedule.xlsx  Отчёт по л_р 2 ОПП Хасков 21209.docx
lab3/: CMakeLists.txt  build.sh  main.c  main1.c  mpe-build.sh  plan.txt  run.sh  time_counting.xlsx  Отчёт_ОПП_Хасков_лр_3.docx
lab4/: CMakeLists.txt  Report.docx  Time_counting.xlsx  build.sh  main.c  mpe-build.sh  run.sh
lab5/: CMakeLists.txt  main.cpp  prog_without_balance.cpp
